text overflow fixed

--- a/layouts/_footer.scss
+++ b/layouts/_footer.scss
@@ -35,7 +35,7 @@
   bottom: 20px;
 }
 
-#part2 {
+.part2 {
   position: relative;
   bottom: 35px;
   line-height: 12px;
