--- a/pages/restos.scss
+++ b/pages/restos.scss
@@ -63,6 +63,7 @@ body {
 }
 
 .case_menu {
+  height: 65px;
   background-color: white;
   border-radius: 15px;
   padding-left: 12px;
@@ -76,12 +77,22 @@ body {
 
   &__part1 {
     width: 90%;
-    line-height: 0.3em;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    // line-height: 0.3em;
+    // white-space: nowrap;
+    // text-overflow: ellipsis;
+    // overflow: hidden;
+    h4 {
+      position: relative;
+      bottom: 6px;
+    }
     p {
       font-weight: 300;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      width: 230px;
+      position: relative;
+      bottom: 24px;
     }
   }
 
